@@ -16,9 +16,12 @@ dependencies {
     implementation 'io.ktor:ktor-server-netty:2.3.0'
     implementation 'io.ktor:ktor-serialization-kotlinx-json:2.3.0'
     implementation 'io.ktor:ktor-server-content-negotiation:2.3.0'
+//    implementation "io.ktor:ktor-client-cio-jvm:$ktor_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.0'
     implementation 'ch.qos.logback:logback-classic:1.4.0'
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
+    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.13.0'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.0'
 }
 
 application {
@@ -27,4 +30,5 @@ application {
 
 test {
     useJUnitPlatform()
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
 }
